<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<groupId>org.simulatest</groupId>
	<artifactId>restmock</artifactId>
	<version>0.1.0</version>
	<name>Rest Mock</name>
	<description>The simplest way to mock HTTP in JVM</description>
	<url>https://github.com/francisrangel/rest-mock</url>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<scm>
		<connection>scm:git:https://github.com/francisrangel/rest-mock.git</connection>
		<developerConnection>scm:git:git@github.com:francisrangel/rest-mock.git</developerConnection>
		<url>https://github.com/francisrangel/rest-mock</url>
	</scm>

	<developers>
		<developer>
			<id>gb</id>
			<name>Gabriel Such</name>
			<email>gabrielsuch@gmail.com</email>
		</developer>
		<developer>
			<id>francisrangel</id>
			<name>Francis Rangel</name>
			<email>francis.rangel@gmail.com</email>
		</developer>
	</developers>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<!-- Reproducible builds: same source bytes in, same jar bytes out.
		     Bump this to the release date on every release. -->
		<project.build.outputTimestamp>2026-05-05T00:00:00Z</project.build.outputTimestamp>
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
		<junit.version>6.0.3</junit.version>
		<!-- slf4j-api is the only third-party jar pushed onto downstream
		     classpaths (compile scope). Pin to the last 1.7.x so Maven's
		     nearest-wins doesn't yank older Spring Boot 2.x users off
		     their 1.7-compatible logback. SLF4J's Logger/LoggerFactory
		     surface is wire-compatible across 1.7 and 2.x. -->
		<slf4j.version>1.7.36</slf4j.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>

		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${slf4j.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>2.21.2</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-xml</artifactId>
			<version>2.21.2</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.version}</version>
		</dependency>

		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.23.0</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.10.0</version>
				<executions>
					<execution>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.5</version>
				<configuration>
					<argLine>-javaagent:${org.mockito:mockito-core:jar}</argLine>
				</configuration>
			</plugin>
			<!-- Sources JAR: attached to every build so `mvn install` produces a
			     complete artifact set and Maven Central gets *-sources.jar. -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>3.4.0</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>package</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Javadoc JAR + lint: attached to every build so Maven Central gets
			     *-javadoc.jar. doclint catches HTML/reference/syntax/accessibility
			     issues but not missing comments - we document intent, not every getter. -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.12.0</version>
				<configuration>
					<doclint>all,-missing</doclint>
					<quiet>true</quiet>
					<failOnWarnings>true</failOnWarnings>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<phase>package</phase>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- CycloneDX SBOM: emits a bom.xml + bom.json next to every jar so
			     downstream supply-chain scanners can enumerate dependencies
			     without re-resolving from Central. -->
			<plugin>
				<groupId>org.cyclonedx</groupId>
				<artifactId>cyclonedx-maven-plugin</artifactId>
				<version>2.9.2</version>
				<executions>
					<execution>
						<id>build-sbom</id>
						<phase>package</phase>
						<goals>
							<goal>makeBom</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<!-- Release-only concerns: GPG signing and Maven Central publishing.
		     Source and javadoc JARs are produced by the default build. -->
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>3.2.8</version>
						<configuration>
							<!-- Loopback pinentry: read the passphrase from the
							     MAVEN_GPG_PASSPHRASE env var (or -Dgpg.passphrase)
							     instead of opening a GUI prompt. Works the same
							     locally and in CI. -->
							<gpgArguments>
								<arg>--pinentry-mode</arg>
								<arg>loopback</arg>
							</gpgArguments>
						</configuration>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.sonatype.central</groupId>
						<artifactId>central-publishing-maven-plugin</artifactId>
						<version>0.10.0</version>
						<extensions>true</extensions>
						<configuration>
							<publishingServerId>central</publishingServerId>
							<autoPublish>false</autoPublish>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
